# menumaker-awesome

./: AUTHORS  Config.py.in  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  mmaker
MenuMaker/: Awesome.py  __init__.py
Prophet/Legacy/: Shell.py
doc/: Makefile.am  Makefile.in  intro.texi  mmaker.info  mmaker.texi
